[project]
name = "radiacode"
version = "0.4.5"
description = "Library for RadiaCode-101/102/103/110 — with macOS BLE support via bleak"
authors = [{ name = "Maxim Andreev", email = "andreevmaxim@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "bluepy~=1.3 ; sys_platform == 'linux'",
    "bleak>=0.22 ; sys_platform != 'linux'",
    "pyusb~=1.3",
]

[project.optional-dependencies]
examples = [
    "aiohttp~=3.9",
    "prometheus-client>=0.19,<0.20",
    "matplotlib~=3.7",
    "numpy~=1.26",
    "pyyaml~=6.0",
]

[project.urls]
Homepage = "https://github.com/Steaeavean/radiacode_stuff"
Repository = "https://github.com/Steaeavean/radiacode_stuff"
Upstream = "https://github.com/cdump/radiacode"

[dependency-groups]
dev = [
    "ruff>=0.11,<0.12",
    "mypy~=1.16",
    "types-pyyaml>=6.0.12.20250915",
    "pytest>=8,<9",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "1 week"

[tool.ruff]
line-length = 130
target-version = "py310"
# phase0/ contains research/validation scripts not subject to library lint rules.
# timesync.py is a standalone utility without strict style requirements.
exclude = ["phase0", "timesync.py", "alarm_probe_lib.py", "read_alarm_limits.py", "validate_alarm_limits.py"]

[tool.ruff.lint]
extend-select = ["B", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
